--- a/CustomMacroBase/Themes/Generic.xaml
+++ b/CustomMacroBase/Themes/Generic.xaml
@@ -10,6 +10,7 @@
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/ContextMenuEx/cMenuItemForHotkey_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/FoldableContainerEx/cFoldableContainer_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/NormalButtonEx/cNormalButton_style.xaml"/>
+        <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/RippleButtonEx/cRippleButton_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/ScrollViewerEx/cScrollViewer_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/SliderEx/cSlider_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/StackPanelEx/cStackPanel_style.xaml"/>
@@ -21,5 +22,5 @@
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/VerticalButtonEx/cVerticalButton_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/VerticalRadioButtonEx/cVerticalRadioButton_style.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-    
+
 </ResourceDictionary>
