--- a/CustomMacroBase/CustomControlEx/FoldableContainerEx/cFoldableContainer_style.xaml
+++ b/CustomMacroBase/CustomControlEx/FoldableContainerEx/cFoldableContainer_style.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
                     xmlns:local="clr-namespace:CustomMacroBase.CustomControlEx.FoldableContainerEx">
 
     <local:cFoldableContainer_converter_height2height x:Key="cFoldableContainer_converter_height2height"/>
@@ -106,21 +107,40 @@
                             </Border>
 
                             <!--DashedLine-->
-                            <Line Grid.Column="0" Grid.Row="1"
-                                  Y1="-2"
-                                  Y2="{Binding ActualHeight, ElementName=body, Converter={StaticResource cFoldableContainer_converter_height2height}, Mode=OneWay}"
-                                  Stroke="#80696969"
-                                  StrokeThickness="1"
-                                  StrokeDashArray="4 1.5"
-                                  HorizontalAlignment="Center"
-                                  Margin="3.5,0,0,0">
-                                <Line.Visibility>
-                                    <MultiBinding Converter="{StaticResource cFoldableContainer_converter_visibility2visibility}">
-                                        <Binding Path="ArrowVisibility" RelativeSource="{RelativeSource TemplatedParent}"/>
-                                        <Binding Path="BodyVisibility" RelativeSource="{RelativeSource TemplatedParent}"/>
-                                    </MultiBinding>
-                                </Line.Visibility>
-                            </Line>
+                            <Border Grid.Column="0" Grid.Row="1" Background="Transparent">
+                                <Border.Style>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="BorderBrush" Value="#80696969"/>
+                                        <Style.Triggers>
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="BorderBrush" Value="{StaticResource ExpandedColor}"/>
+                                            </Trigger>
+                                        </Style.Triggers>
+                                    </Style>
+                                </Border.Style>
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseLeftButtonUp">
+                                        <i:InvokeCommandAction Command="{Binding ArrowCommand, 
+                                                                                 RelativeSource={RelativeSource AncestorType={x:Type local:cFoldableContainer}}}" />
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+
+                                <Line Y1="-2"
+                                      Y2="{Binding ActualHeight, ElementName=body, Converter={StaticResource cFoldableContainer_converter_height2height}, Mode=OneWay}"
+                                      Stroke="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType={x:Type Border}},Mode=OneWay}"
+                                      StrokeThickness="1"
+                                      StrokeDashArray="4 1.5"
+                                      HorizontalAlignment="Center"
+                                      Margin="3.5,0,0,0"
+                                      IsHitTestVisible="False">
+                                    <Line.Visibility>
+                                        <MultiBinding Converter="{StaticResource cFoldableContainer_converter_visibility2visibility}">
+                                            <Binding Path="ArrowVisibility" RelativeSource="{RelativeSource TemplatedParent}"/>
+                                            <Binding Path="BodyVisibility" RelativeSource="{RelativeSource TemplatedParent}"/>
+                                        </MultiBinding>
+                                    </Line.Visibility>
+                                </Line>
+                            </Border>
                             
                             <!--Header-->
                             <ContentControl Grid.Column="1" Grid.Row="0" Content="{TemplateBinding Header}"/>
