--- a/CustomMacroBase/CustomControlEx/ToggleButtonEx/cToggleButton_style.xaml
+++ b/CustomMacroBase/CustomControlEx/ToggleButtonEx/cToggleButton_style.xaml
@@ -6,6 +6,7 @@
     <local:cToggleButton_converter_diameter2width x:Key="cToggleButton_converter_diameter2width"/>
     <local:cToggleButton_converter_radius2cornerradius x:Key="cToggleButton_converter_radius2cornerradius"/>
     <local:cToggleButton_converter_transformXnullcheck x:Key="cToggleButton_converter_transformXnullcheck"/>
+    <local:cToggleButton_converter_visibility2minwidth x:Key="cToggleButton_converter_visibility2minwidth"/>
     
     <VisualBrush x:Key="StripeTexture" TileMode="Tile" Viewport="0,0,3,3" ViewportUnits="Absolute" Viewbox="0,0,15,15" ViewboxUnits="Absolute">
         <VisualBrush.Visual>
@@ -40,7 +41,7 @@
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="{TemplateBinding DotDiameter, Converter={StaticResource cToggleButton_converter_diameter2width}}"/>
                                     <ColumnDefinition Width="Auto"/>
-                                    <ColumnDefinition Width="*" MinWidth="10"/>
+                                    <ColumnDefinition Width="*" MinWidth="{TemplateBinding GuideLineVisibility, Converter={StaticResource cToggleButton_converter_visibility2minwidth}}"/>
                                 </Grid.ColumnDefinitions>
                                 
                                 <!--Left 滑块本体-->
@@ -88,6 +89,7 @@
                                       HorizontalAlignment="Stretch" 
                                       VerticalAlignment="Center"
                                       OpacityMask="{StaticResource StripeTexture}"
+                                      Visibility="{TemplateBinding GuideLineVisibility}"
                                       Margin="2,1,0,0"
                                       IsHitTestVisible="False">
                                     <Border HorizontalAlignment="Stretch"
@@ -150,7 +152,7 @@
                             </Trigger.ExitActions>
                         </Trigger>
 
-                        <Trigger Property="IsChecked" Value="True">
+                        <!--<Trigger Property="IsChecked" Value="True">
                             <Trigger.EnterActions>
                                 <BeginStoryboard>
                                     <Storyboard>
@@ -169,7 +171,61 @@
                                     </Storyboard>
                                 </BeginStoryboard>
                             </Trigger.ExitActions>
-                        </Trigger>
+                        </Trigger>-->
+                        
+                        <!--主色红-->
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding UseAlternateDotColor, RelativeSource={RelativeSource Self}}" Value="false"/>
+                                <Condition Binding="{Binding IsChecked, RelativeSource={RelativeSource Self}}" Value="true"/>
+                            </MultiDataTrigger.Conditions>
+
+                            <MultiDataTrigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="Slider" Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)">
+                                            <EasingColorKeyFrame KeyTime="00:00:00:0.1" Value="#FFC62626"/>
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiDataTrigger.EnterActions>
+                            <MultiDataTrigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="Slider" Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)">
+                                            <EasingColorKeyFrame KeyTime="00:00:00:0.1" Value="#FFA0A0A0"/>
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiDataTrigger.ExitActions>
+                        </MultiDataTrigger>
+
+                        <!--后补色蓝-->
+                        <MultiDataTrigger>
+                            <MultiDataTrigger.Conditions>
+                                <Condition Binding="{Binding UseAlternateDotColor, RelativeSource={RelativeSource Self}}" Value="true"/>
+                                <Condition Binding="{Binding IsChecked, RelativeSource={RelativeSource Self}}" Value="true"/>
+                            </MultiDataTrigger.Conditions>
+
+                            <MultiDataTrigger.EnterActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="Slider" Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)">
+                                            <EasingColorKeyFrame KeyTime="00:00:00:0.1" Value="#FF1394E4"/>
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiDataTrigger.EnterActions>
+                            <MultiDataTrigger.ExitActions>
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <ColorAnimationUsingKeyFrames Storyboard.TargetName="Slider" Storyboard.TargetProperty="(Background).(SolidColorBrush.Color)">
+                                            <EasingColorKeyFrame KeyTime="00:00:00:0.1" Value="#FFA0A0A0"/>
+                                        </ColorAnimationUsingKeyFrames>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </MultiDataTrigger.ExitActions>
+                        </MultiDataTrigger>
 
                         <DataTrigger Binding="{Binding DisableSliderButton, RelativeSource={RelativeSource Self}}" Value="True">
                             <Setter Property="IsHitTestVisible" Value="False"/>
