--- a/CustomMacroBase/CustomControlEx/VerticalButtonEx/cVerticalButtonBase_style.xaml
+++ b/CustomMacroBase/CustomControlEx/VerticalButtonEx/cVerticalButtonBase_style.xaml
@@ -1,9 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-                    xmlns:local="clr-namespace:CustomMacroBase.CustomControlEx.VerticalButtonEx">
+                    xmlns:local="clr-namespace:CustomMacroBase.CustomControlEx.VerticalButtonEx" 
+                    xmlns:contextmenuex="clr-namespace:CustomMacroBase.CustomControlEx.ContextMenuEx">
 
     <BooleanToVisibilityConverter x:Key="BoolVisibilityConverter"/>
-
+    <local:cVerticalButtonBase_converter_content2visibility x:Key="cVerticalButtonBase_converter_content2visibility"/>
+    
     <Style TargetType="{x:Type local:cVerticalButtonBase}">
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="BorderThickness" Value="0"/>
@@ -21,6 +23,48 @@
                         <Grid.RowDefinitions>
                             <RowDefinition MinHeight="25"/>
                         </Grid.RowDefinitions>
+                        <Grid.ContextMenu>
+                            <contextmenuex:cContextMenu Visibility="{Binding DataContext.RightClickContent, 
+                                                                             RelativeSource={RelativeSource Self},
+                                                                             Mode=OneWay,
+                                                                             Converter={StaticResource cVerticalButtonBase_converter_content2visibility}}">
+                                <ContextMenu.Resources>
+                                    <Style TargetType="{x:Type MenuItem}">
+                                        <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+                                        <Setter Property="StaysOpenOnClick" Value="True"/>
+                                        <Setter Property="Template">
+                                            <Setter.Value>
+                                                <ControlTemplate TargetType="{x:Type MenuItem}">
+                                                    <Border x:Name="Border" BorderThickness="2" CornerRadius="4">
+                                                        <Grid>
+                                                            <ContentPresenter x:Name="HeaderHost" Grid.Column="1" ContentSource="Header" RecognizesAccessKey="True" />
+                                                        </Grid>
+                                                    </Border>
+                                                </ControlTemplate>
+                                            </Setter.Value>
+                                        </Setter>
+                                    </Style>
+                                </ContextMenu.Resources>
+                                
+                                <Border MinWidth="180"
+                                        MinHeight="60"
+                                        BorderBrush="Crimson" 
+                                        BorderThickness="1"
+                                        Background="Black"
+                                        CornerRadius="2.5"
+                                        Padding="5">
+                                    <ItemsControl ItemsSource="{Binding DataContext.RightClickContent, RelativeSource={RelativeSource Self}, Mode=OneWay}">
+                                        <ItemsControl.Template>
+                                            <ControlTemplate TargetType="ItemsControl">
+                                                <Border>
+                                                    <StackPanel IsItemsHost="True" Orientation="Vertical"/>
+                                                </Border>
+                                            </ControlTemplate>
+                                        </ItemsControl.Template>
+                                    </ItemsControl>
+                                </Border>
+                            </contextmenuex:cContextMenu>
+                        </Grid.ContextMenu>
 
                         <!--主要部分，应与图标部分互斥-->
                         <Border x:Name="verticalButtonBorder"
