--- a/CustomMacroBase/CustomControlEx/ToggleButtonGroupEx/cToggleButtonGroup_style.xaml
+++ b/CustomMacroBase/CustomControlEx/ToggleButtonGroupEx/cToggleButtonGroup_style.xaml
@@ -31,6 +31,7 @@
                                             <Binding Path="Children"/>
                                             <Binding Path="ChildrenExZero"/>
                                             <Binding Path="ActualHeight" ElementName="childrenexzero"/>
+                                            <Binding Path="ActualHeight" ElementName="children"/>
                                         </MultiBinding>
                                     </foldablecontainerex:cFoldableContainer.ArrowVisibility>
                                     <foldablecontainerex:cFoldableContainer.Header>
@@ -115,6 +116,7 @@
                                             <Binding Path="Children"/>
                                             <Binding Path="ChildrenExZero"/>
                                             <Binding Path="ActualHeight" ElementName="childrenexzero"/>
+                                            <Binding Path="ActualHeight" ElementName="children"/>
                                         </MultiBinding>
                                     </foldablecontainerex:cFoldableContainer.ArrowVisibility>
                                     <foldablecontainerex:cFoldableContainer.Header>
@@ -203,6 +205,7 @@
                                         <Binding Path="DataContext.Children" RelativeSource="{RelativeSource TemplatedParent}"/>
                                         <Binding Path="DataContext.ChildrenEx" RelativeSource="{RelativeSource TemplatedParent}"/>
                                         <Binding Path="ActualHeight" ElementName="childrenexzero"/>
+                                        <Binding Path="ActualHeight" ElementName="children"/>
                                     </MultiBinding>
                                 </foldablecontainerex:cFoldableContainer.ArrowVisibility>
                                 <foldablecontainerex:cFoldableContainer.Header>
@@ -239,7 +242,7 @@
                                         </ItemsControl.Template>
                                     </local:cChildrenExContainer>
                                     <!--Children-->
-                                    <local:cChildrenContainer Grid.Row="1"
+                                    <local:cChildrenContainer Grid.Row="1" x:Name="children"
                                                               DataContext="{TemplateBinding DataContext}"
                                                               ItemsSource="{Binding Children}"
                                                               EnableChildren="{Binding Enable, Mode=OneWay}"
