--- a/CustomMacroFactory/MainWindow/UserControlEx/TitleBarEx/uTitleBar.xaml
+++ b/CustomMacroFactory/MainWindow/UserControlEx/TitleBarEx/uTitleBar.xaml
@@ -10,10 +10,6 @@
              d:MinWidth="240">
     <UserControl.Resources>
         <ResourceDictionary>
-            <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/CustomMacroFactory;component/MainWindow/UserControlEx/TitleBarEx/uTitleBar_style.xaml"/>
-            </ResourceDictionary.MergedDictionaries>
-            
             <SolidColorBrush Color="#862E2F34" x:Key="AreaColor"/>
             
             <DoubleCollection x:Key = "double_def">15 11.5</DoubleCollection>
@@ -43,33 +39,29 @@
     <d:UserControl.DataContext>
         <local:uTitleBar_viewmodel/>
     </d:UserControl.DataContext>
-    
-    <Grid>
+
+    <Grid Background="{StaticResource AreaColor}" >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
         
-        <!--底板/防止完全穿透-->
-        <Rectangle x:Name="ChromeRect" Opacity="1" Fill="{StaticResource AreaColor}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                   Grid.Column="0" Grid.ColumnSpan="2"/>
         <Rectangle Opacity=".2" Fill="{StaticResource StripeTexture}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
                    Grid.Column="0" Grid.ColumnSpan="2"/>
         
         <!--靠左-->
         <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Stretch" >
-            <Button x:Name="IconBtn" Margin="1,0,0,0" BorderBrush="#00F11717" Padding="1" Background="#00DDDDDD" 
-                    Height="24" Width="24" Focusable="False" VerticalAlignment="Center" HorizontalAlignment="Left"
-                    Style="{StaticResource TitleBarEmptyButtonStyle}">
+            <titlebarbuttonex:cTitleBarButton x:Name="IconBtn" Type="MaxMinBtn" Margin="1,0,0,0" Padding="1"
+                                              Height="24" Width="24" Focusable="False" IsHitTestVisible="False">
                 <Grid Width="20" Height="20" Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center">
-                    <Rectangle Fill="snow" RadiusX="2.5" RadiusY="{Binding RadiusX, RelativeSource={RelativeSource Self}}" Margin="0"/>
+                    <Rectangle Fill="Snow" RadiusX="2.5" RadiusY="{Binding RadiusX, RelativeSource={RelativeSource Self}}" Margin="0"/>
                     <Path Data="{StaticResource GamePadIcon}" 
                           Fill="#1B1B1B"
                           Stretch="Uniform" 
                           Width="18"
                           Height="{Binding Width, RelativeSource={RelativeSource Self}}"/>
                 </Grid>
-            </Button>
+            </titlebarbuttonex:cTitleBarButton>
             <TextBlock x:Name="TextBlock2" TextWrapping="Wrap" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="4,0,4,0"
                        Text="{Binding DataContext.Title, FallbackValue=Title, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=UserControl}}"
                        Foreground="Snow"
@@ -83,7 +75,7 @@
             <titlebarbuttonex:cTitleBarButton x:Name="ResetPosBtn" Type="MaxMinBtn" Width="30" Height="25" HorizontalAlignment="Right" VerticalAlignment="Center" Click="ResetPosButton_Click"
                                               IsActive="{Binding IsActive, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=UserControl}}">
                 <Path Data="M838.695 374.154A354.62 354.62 0 0 0 512 157.538a354.462 354.462 0 1 0 0 708.924A354.58 354.58 0 0 0 842.161 641.26a39.385 39.385 0 1 1 73.334 28.751A433.31 433.31 0 0 1 512 945.231C272.738 945.23 78.77 751.26 78.77 512S272.737 78.77 512 78.77c144.423 0 275.14 71.285 354.462 183.965V177.23a39.385 39.385 0 0 1 78.769 0v236.307a39.266 39.266 0 0 1-39.385 39.385H708.923a39.385 39.385 0 0 1 0-78.77h129.772z"
-                      Fill="{Binding Foreground, ElementName=CloseBtn}"
+                      Fill="{Binding Foreground, ElementName=CloseBtn, Mode=OneWay}"
                       Margin="0" 
                       Stretch="Fill" 
                       Width="{Binding [1], Source={StaticResource double_def}}"
@@ -92,7 +84,7 @@
             <titlebarbuttonex:cTitleBarButton x:Name="MinimizeBtn" Type="MaxMinBtn" Width="30" Height="25" HorizontalAlignment="Right" VerticalAlignment="Center" Click="MinimizeButton_Click" IsEnabled="False"
                                               IsActive="{Binding IsActive, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=UserControl}}">
                 <Path Data="M984.615385 955.076923c0 15.753846-13.784615 29.538462-29.538462 29.538462h-886.153846c-15.753846 0-29.538462-13.784615-29.538462-29.538462v-59.076923c0-15.753846 13.784615-29.538462 29.538462-29.538462h886.153846c15.753846 0 29.538462 13.784615 29.538462 29.538462v59.076923z"
-                      Fill="{Binding Foreground, ElementName=CloseBtn}"
+                      Fill="{Binding Foreground, ElementName=CloseBtn, Mode=OneWay}"
                       Margin="0,9,0,0"
                       Stretch="Fill"
                       Width="{Binding [1], Source={StaticResource double_def}}"
@@ -102,7 +94,7 @@
                                               IsActive="{Binding IsActive, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=UserControl}}">
                 <Path Data="M915.995 960.219H110.228c-24.262 0-44-19.738-44-44V110.228c0-24.262 19.738-44 44-44h805.768c24.262 0 44 19.738 44 44v805.991c-0.001 24.261-19.739 44-44.001 44z m-785.767-64h765.768V130.228H130.228v765.991z
                             M124.462 128.688h803.533v64H124.462z"
-                      Fill="{Binding Foreground, ElementName=CloseBtn}"
+                      Fill="{Binding Foreground, ElementName=CloseBtn, Mode=OneWay}"
                       Margin="0"
                       Stretch="Fill"
                       Width="{Binding [1], Source={StaticResource double_def}}"
@@ -112,7 +104,7 @@
                                               IsActive="{Binding IsActive, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=UserControl}}"
                                               Foreground="#FFDCDFE1" >
                 <Path Data="M571.733333 512l268.8-268.8c17.066667-17.066667 17.066667-42.666667 0-59.733333-17.066667-17.066667-42.666667-17.066667-59.733333 0L512 452.266667 243.2 183.466667c-17.066667-17.066667-42.666667-17.066667-59.733333 0-17.066667 17.066667-17.066667 42.666667 0 59.733333L452.266667 512 183.466667 780.8c-17.066667 17.066667-17.066667 42.666667 0 59.733333 8.533333 8.533333 19.2 12.8 29.866666 12.8s21.333333-4.266667 29.866667-12.8L512 571.733333l268.8 268.8c8.533333 8.533333 19.2 12.8 29.866667 12.8s21.333333-4.266667 29.866666-12.8c17.066667-17.066667 17.066667-42.666667 0-59.733333L571.733333 512z"
-                      Fill="{Binding Foreground, ElementName=CloseBtn}"
+                      Fill="{Binding Foreground, ElementName=CloseBtn, Mode=OneWay}"
                       Margin="0" 
                       Stretch="Fill" 
                       Width="{Binding [1], Source={StaticResource double_def}}"
