--- a/CustomMacroBase/Themes/Generic.xaml
+++ b/CustomMacroBase/Themes/Generic.xaml
@@ -12,6 +12,7 @@
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/ContextMenuEx/cMenuItemForHotkey_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/FoldableContainerEx/cFoldableContainer_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/NormalButtonEx/cNormalButton_style.xaml"/>
+        <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/PointCurveChartEx/cPointCurveChart_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/RippleButtonEx/cRippleButton_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/ScrollViewerEx/cScrollViewer_style.xaml"/>
         <ResourceDictionary Source="/CustomMacroBase;component/CustomControlEx/SliderEx/cSlider_style.xaml"/>
