--- a/CustomMacroFactory/MainWindow/CustomControlPreView.xaml
+++ b/CustomMacroFactory/MainWindow/CustomControlPreView.xaml
@@ -14,7 +14,7 @@
              xmlns:valueindicatorex="clr-namespace:CustomMacroBase.CustomControlEx.ValueIndicatorEx;assembly=CustomMacroBase"
              xmlns:scrollviewerex="clr-namespace:CustomMacroBase.CustomControlEx.ScrollViewerEx;assembly=CustomMacroBase" 
              xmlns:comboboxex="clr-namespace:CustomMacroBase.CustomControlEx.ComboBoxEx;assembly=CustomMacroBase" 
-             xmlns:colorfultextblockex="clr-namespace:CustomMacroBase.CustomControlEx.ColorfulTextBlockEx;assembly=CustomMacroBase"
+             xmlns:colorfultextblockex="clr-namespace:CustomMacroBase.CustomControlEx.ColorfulTextBlockEx;assembly=CustomMacroBase" xmlns:tooltipinfobuttonex="clr-namespace:CustomMacroBase.CustomControlEx.TooltipInfoButtonEx;assembly=CustomMacroBase"
              mc:Ignorable="d" 
              
              SnapsToDevicePixels="True" 
@@ -23,7 +23,7 @@
              UseLayoutRounding="true" 
              
              Visibility="Collapsed"
-             d:DesignHeight="200" d:DesignWidth="400" d:Visibility="Visible">
+             d:DesignHeight="200" d:DesignWidth="600" d:Visibility="Visible">
     <Border BorderBrush="Red" BorderThickness="2" Padding="5">
         <Grid>
             <StackPanel Orientation ="Horizontal"
@@ -86,6 +86,40 @@
                                                               BackgroundCornerRadius="2.5"
                                                               MaskBackgroundColor="Transparent"/>
                         
+                    </StackPanel>
+                </scrollviewerex:cScrollViewer>
+                
+                <scrollviewerex:cScrollViewer VerticalScrollBarVisibility="Hidden"
+                                              ScrollBarBackgroundColor="Snow"
+                                              BackgroundColor="#5A4350"
+                                              BackgroundCornerRadius="4">
+                    <ScrollViewer.Resources>
+                        <Geometry x:Key="TestIcon">
+                            M556.891676 638.208l-22.384-20.928 0 272.464c0 17.792 14.432 32.256 32.24 32.256l80.608 0c17.808 0 32.24-14.448 32.24-32.256L679.595676 525.44 556.891676 638.208z
+                            M345.131676 440.16l-65.872 58.848 0 390.752c0 17.792 14.416 32.256 32.24 32.256l80.608 0c17.808 0 32.24-14.448 32.24-32.256L424.347676 514.256 345.131676 440.16z
+                            M23.995676 726.976l0 164.128c0 17.792 14.432 32.256 32.256 32.256l80.608 0c17.792 0 32.24-14.448 32.24-32.256L169.099676 596.912 23.995676 726.976z
+                            M789.739676 889.744c0 17.792 14.432 32.256 32.24 32.256l80.608 0c17.792 0 32.24-14.448 32.24-32.256L934.827676 291.808l-145.072 132.8L789.755676 889.744z
+                            M990.891676 102.096l-145.584 45.376c-16.928 5.296-20.112 19.44-7.072 31.456l38.592 35.6L557.499676 507.712 362.827676 325.472c-9.04-8.464-23.104-8.64-32.368-0.384L8.027676 612.576c-9.888 8.816-10.768 23.984-1.936 33.872 4.736 5.328 11.312 8.032 17.92 8.032 5.664 0 11.376-2 15.952-6.096l306.064-272.912 194.912 182.48c9.152 8.576 23.392 8.64 32.64 0.16l338.656-310.96 42.72 39.392c13.024 12.048 26.528 7.664 30-9.744l30.4-152.688C1018.827676 106.736 1007.803676 96.8 990.891676 102.096z
+                        </Geometry>
+                    </ScrollViewer.Resources>
+                    
+                    <StackPanel Orientation ="Vertical"
+                                AttachedProperty:PanelExtensions.Spacing="2">
+                        <tooltipinfobuttonex:cTooltipInfoButton Height="20" 
+                                                                Width="20"
+                                                                Background="Crimson" 
+                                                                BorderCornerRadius="2.5"
+                                                                ContextMenuIsOpen="False">
+                            <Path Data="{StaticResource TestIcon}" 
+                                  Fill="#1B1B1B"
+                                  Stretch="Uniform" 
+                                  Width="18"
+                                  Height="{Binding Width, RelativeSource={RelativeSource Self}}"/>
+                            
+                            <tooltipinfobuttonex:cTooltipInfoButton.ToolTipContent>
+                                <Grid Width="25" Height="25" Background="Yellow"/>
+                            </tooltipinfobuttonex:cTooltipInfoButton.ToolTipContent>
+                        </tooltipinfobuttonex:cTooltipInfoButton>
                     </StackPanel>
                 </scrollviewerex:cScrollViewer>
             </StackPanel>
