--- a/CustomMacroBase/CustomControlEx/ToggleButtonGroupEx/cToggleButtonGroup_style.xaml
+++ b/CustomMacroBase/CustomControlEx/ToggleButtonGroupEx/cToggleButtonGroup_style.xaml
@@ -2,7 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:CustomMacroBase.CustomControlEx.ToggleButtonGroupEx" 
                     xmlns:togglebuttonex="clr-namespace:CustomMacroBase.CustomControlEx.ToggleButtonEx" 
-                    xmlns:contextmenuex="clr-namespace:CustomMacroBase.CustomControlEx.ContextMenuEx" xmlns:foldablecontainerex="clr-namespace:CustomMacroBase.CustomControlEx.FoldableContainerEx">
+                    xmlns:contextmenuex="clr-namespace:CustomMacroBase.CustomControlEx.ContextMenuEx"
+                    xmlns:foldablecontainerex="clr-namespace:CustomMacroBase.CustomControlEx.FoldableContainerEx">
 
     <local:cToggleButtonGroup_converter_bool2visibility x:Key="cToggleButtonGroup_converter_bool2visibility"/>
     <local:cToggleButtonGroup_converter_bool2opacity x:Key="cToggleButtonGroup_converter_bool2opacity"/>
@@ -94,7 +95,7 @@
                                                     <StackPanel IsItemsHost="True" Orientation="Vertical"/>
                                                 </ControlTemplate>
                                             </ItemsControl.Template>
-                                            </local:cChildrenExContainer>
+                                        </local:cChildrenExContainer>
                                     </Grid>
                                 </foldablecontainerex:cFoldableContainer>
                             </Grid>
@@ -179,7 +180,7 @@
                                                     <StackPanel IsItemsHost="True" Orientation="Vertical"/>
                                                 </ControlTemplate>
                                             </ItemsControl.Template>
-                                            </local:cChildrenExContainer>
+                                        </local:cChildrenExContainer>
                                     </Grid>
                                 </foldablecontainerex:cFoldableContainer>
                             </Grid>
